--- a/source/index.html
+++ b/source/index.html
@@ -41,5 +41,8 @@
         </div>
       </nav>
     </header>
+    <main class="main-container">
+      <h1 class="visually-hidden"></h1>
+    </main>
   </body>
 </html>
