--- a/source/index.html
+++ b/source/index.html
@@ -7,7 +7,7 @@
   <body class="page__body">
     <header class="main-header">
       <a class="main-header__logo" href="">
-        <img src="image/svg/mishka-logo-mobile.svg.svg" width="86" height="35" alt="Логотип Мишки.">
+        <img src="icons/mishka-logo-mobile.svg.svg" width="86" height="35" alt="Логотип Мишки.">
       </a>
       <nav class="main-nav">
         <button class="main-nav__toggle" type="button">
@@ -36,13 +36,58 @@
             </li>
             <li class="user-list__item">
               <a class="user-list__link" href="#">Корзина: пока пуста</a>
+              <p class="user-list__description">Бесплатная доставка по России</p>
             </li>
           </ul>
         </div>
       </nav>
     </header>
     <main class="main-container">
-      <h1 class="visually-hidden"></h1>
+      <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka".</h1>
+      <section class="products">
+        <div class="products__wrapper">
+          <h2 class="products__title">Милые штуки ручной работы для дома</h2>
+          <ul class="products__list">
+            <li class="products__item">
+              <a class="products__link products__link--icon_interior" href="#">Предметы интерьера</a>
+            </li>
+            <li class="products__item">
+              <a class="products__link products__link--icon_toy" href="#">Детские игрушки</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="featured">
+        <div class="featured__wrapper">
+          <h2 class="visually-hidden">Описание.</h2>
+          <dl class="featured__list">
+            <div class="featured__item">
+              <dt class="featured__label">Товар недели</dt>
+              <dd class="featured__product product-card">
+                <div class="product-card__wrapper">
+                  <h3 class="product-card__title">Вязаные корзинки</h3>
+                  <p class="product-card__description">Экологически чистая пряжа,
+                    ручная работа. Доступны в шести расцветках и трёх размерах.</p>
+                  <dl class="product-card__list">
+                    <dt class="product-card__item">Цвет:</dt>
+                    <dd class="product-card__specification">иффани/серый</dd>
+                    <dt class="product-card__item">Диаметр:</dt>
+                    <dd class="product-card__specification">25 см</dd>
+                    <dt class="product-card__item">Высота:</dt>
+                    <dd class="product-card__specification">15 см</dd>
+                  </dl>
+                  <img class="product-card__image" src="images/basket-mobile.jpg" width="260" height="315" alt="Набор из трёх вязанных корзинок.">
+                  <dl class="product-card__price product-price">
+                    <dt class="product-price__description">Цена:</dt>
+                    <dd class="product-price__number">990 руб.</dd>
+                  </dl>
+                  <button class="product-card__button">Заказать</button>
+                </div>
+              </dd>
+            </div>
+          </dl>
+        </div>
+      </section>
     </main>
   </body>
 </html>
