--- a/source/index.html
+++ b/source/index.html
@@ -88,6 +88,31 @@
           </dl>
         </div>
       </section>
+      <section class="about">
+        <div class="about__wrapper">
+          <h2 class="about__title">Коротко о нас:</h2>
+          <ul class="about__list">
+            <li class="about__item">
+              <a class="about__link about__link--icon_flower" href="#">Экологически чистые материалы</a>
+            </li>
+            <li class="about__item">
+              <a class="about__link about__link--icon_banknote" href="#">Скандинавский стиль по российской цене</a>
+            </li>
+            <li class="about__item">
+              <a class="about__link about__link--icon_heart" href="#">Увеличивает лайки на фотографиях</a>
+            </li>
+            <li class="about__item">
+              <a class="about__link about__link--icon_clew" href="#">Связано вручную с любовью и умилением</a>
+            </li>
+            <li class="about__item">
+              <a class="about__link about__link--icon_rocket" href="#">Поддержка отечественного производителя</a>
+            </li>
+            <li class="about__item">
+              <a class="about__link about__link--icon_gift-wrap" href="#">Поставляется в подарочной упаковке</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
   </body>
 </html>
