--- a/source/index.html
+++ b/source/index.html
@@ -60,12 +60,9 @@
       <section class="featured">
         <div class="featured__wrapper">
           <h2 class="visually-hidden">Описание.</h2>
-          <dl class="featured__list">
-            <div class="featured__item">
-              <dt class="featured__label">Товар недели</dt>
-              <dd class="featured__product product-card">
-                <div class="product-card__wrapper">
+              <div class="featured__product product-card">
                   <h3 class="product-card__title">Вязаные корзинки</h3>
+                  <span class="product-card__label">Товар недели</span>
                   <p class="product-card__description">Экологически чистая пряжа,
                     ручная работа. Доступны в шести расцветках и трёх размерах.</p>
                   <dl class="product-card__list">
@@ -82,10 +79,7 @@
                     <dd class="product-price__number">990 руб.</dd>
                   </dl>
                   <button class="product-card__button">Заказать</button>
-                </div>
-              </dd>
-            </div>
-          </dl>
+              </div>
         </div>
       </section>
       <section class="about">
@@ -111,6 +105,24 @@
               <a class="about__link about__link--icon_gift-wrap" href="#">Поставляется в подарочной упаковке</a>
             </li>
           </ul>
+        </div>
+      </section>
+      <section class="reviews">
+        <div class="reviews__wrapper">
+          <h2 class="reviews__title">Отзывы</h2>
+          <figure class="reviwes__quote">
+            <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
+              у популярных инстамамочек.
+              В отчаянии, я накупила аксессуаров и игрушек в Мишке,
+              и мои фотографии сразу стали более стильными, а также набирают больше лайков!
+            </blockquote>
+            <figcaption class="rewiews__author">Анастасия Красильникова<cite class="reviews__cite"></cite>@misssssiskras</figcaption>
+          </figure>
+          <p class="reviwes__buttons button-reviwes">
+            <button class="button-reviwes button-reviwes__previous" type="button"><span class="visually-hidden">Предыдущий отзыв.</span></button>
+            <button class="button-reviwes button-reviwes__next" type="button"><span class="visually-hidden">Следующий отзыв.</span></button>
+            <button class="button-reviwes button-reviwe" type="button">Написать</button>
+          </p>
         </div>
       </section>
     </main>
