--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page__body">
     <header class="main-header">
-      <a class="main-header__logo" href="">
+      <a class="main-header__logo" href="#">
         <img src="icons/mishka-logo-mobile.svg.svg" width="86" height="35" alt="Логотип Мишки.">
       </a>
       <nav class="main-nav">
@@ -134,10 +134,52 @@
           <p class="address__title">адрес:</p>
           <p class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</p>
         </address>
-        <img class="contacts__map" src="images/map-mobile.png" width="320" height="454" alt="Карта с расположением магазина Мишки.">
+        <div class="contacts__map">
+          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+        </div>
         <button class="contacts__button button" type="button">Напишите нам</button>
       </div>
       </article>
+      <footer class="main-footer">
+        <div class="main-footer__wrapper">
+          <a class="main-footer__logo" href="#">
+            <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
+          </a>
+          <div class="main-footer__social social">
+            <ul class="social__list">
+              <li class="social__item">
+                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
+              </li>
+              <li class="social__item">
+                <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
+              </li>
+            </ul>
+          </div>
+          <div class="main-footer__copyright copyright">
+            <b class="copyright__text">Разработано:</b>
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+              <span class="visually-hidden">Логотип HTML Academy.</span>
+            </a>
+          </div>
+        </div>
+      </footer>
+      <div class="main-modal main-modal__close">
+        <div class="main-modal__wrapper">
+          <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
+            <h3 class="modal-form__title">Добавить в корзину</h3>
+            <p class="modal-form__label">Выберите размер:</p>
+            <div class="modal-form__buttons basket-button">
+              <button class="basket-button basket-button--size_s basket-button--current" type="button">S</button>
+              <button class="basket-button basket-button--size_m" type="button">M</button>
+              <button class="basket-button basket-button--size_l" type="button">L</button>
+            </div>
+            <button class="main-modal__button button-submit" type="submit">Добавить</button>
+          </form>
+        </div>
+      </div>
     </main>
   </body>
 </html>
