--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mishka</title>
+    <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -43,7 +44,7 @@
       </nav>
     </header>
     <main class="main-container">
-      <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka".</h1>
+      <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
       <section class="products">
         <div class="products__wrapper">
           <h2 class="products__title">Милые штуки ручной работы для дома</h2>
@@ -59,7 +60,7 @@
       </section>
       <section class="featured">
         <div class="featured__wrapper">
-          <h2 class="visually-hidden">Описание.</h2>
+          <h2 class="visually-hidden">Описание</h2>
               <div class="featured__product product-card">
                   <h3 class="product-card__title">Вязаные корзинки</h3>
                   <span class="product-card__label">Товар недели</span>
@@ -78,7 +79,7 @@
                     <dt class="product-price__description">Цена:</dt>
                     <dd class="product-price__number">990 руб.</dd>
                   </dl>
-                  <button class="product-card__button">Заказать</button>
+                  <a class="product-card__button" href="form.html">Заказать</a>
               </div>
         </div>
       </section>
@@ -87,22 +88,22 @@
           <h2 class="about__title">Коротко о нас:</h2>
           <ul class="about__list">
             <li class="about__item">
-              <a class="about__link about__link--icon_flower" href="#">Экологически чистые материалы</a>
+              <span class="about__text about__text--icon_flower" href="#">Экологически чистые материалы</span>
             </li>
             <li class="about__item">
-              <a class="about__link about__link--icon_banknote" href="#">Скандинавский стиль по российской цене</a>
+              <span class="about__text about__text--icon_banknote" href="#">Скандинавский стиль по российской цене</span>
             </li>
             <li class="about__item">
-              <a class="about__link about__link--icon_heart" href="#">Увеличивает лайки на фотографиях</a>
+              <span class="about__text about__text--icon_heart" href="#">Увеличивает лайки на фотографиях</span>
             </li>
             <li class="about__item">
-              <a class="about__link about__link--icon_clew" href="#">Связано вручную с любовью и умилением</a>
+              <span class="about__text about__text--icon_clew" href="#">Связано вручную с любовью и умилением</span>
             </li>
             <li class="about__item">
-              <a class="about__link about__link--icon_rocket" href="#">Поддержка отечественного производителя</a>
+              <span class="about__text about__text--icon_rocket" href="#">Поддержка отечественного производителя</span>
             </li>
             <li class="about__item">
-              <a class="about__link about__link--icon_gift-wrap" href="#">Поставляется в подарочной упаковке</a>
+              <span class="about__text about__text--icon_gift-wrap" href="#">Поставляется в подарочной упаковке</span>
             </li>
           </ul>
         </div>
@@ -110,18 +111,18 @@
       <section class="reviews">
         <div class="reviews__wrapper">
           <h2 class="reviews__title">Отзывы</h2>
-          <figure class="reviwes__quote">
-            <blockquote class="reviews__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
+          <figure class="reviews__quote quote">
+            <blockquote class="quote__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
               у популярных инстамамочек.
               В отчаянии, я накупила аксессуаров и игрушек в Мишке,
               и мои фотографии сразу стали более стильными, а также набирают больше лайков!
             </blockquote>
-            <figcaption class="rewiews__author">Анастасия Красильникова<cite class="reviews__cite"></cite>@misssssiskras</figcaption>
+            <figcaption class="quote__author author">Анастасия Красильникова <cite class="author__cite">@misssssiskras</cite></figcaption>
           </figure>
-          <p class="reviwes__buttons button-reviwes">
-            <button class="button-reviwes button-reviwes__previous" type="button"><span class="visually-hidden">Предыдущий отзыв.</span></button>
-            <button class="button-reviwes button-reviwes__next" type="button"><span class="visually-hidden">Следующий отзыв.</span></button>
-            <button class="button-reviwes button-reviwe" type="button">Написать</button>
+          <p class="reviews__buttons button-reviews">
+            <button class="button-reviews button-reviews--previous" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+            <button class="button-reviews button-reviews--next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
+            <button class="button-reviews button-reviwe" type="button">Написать</button>
           </p>
         </div>
       </section>
@@ -135,51 +136,64 @@
           <p class="address__content">г. Санкт-Петербургул. Большая Конюшеннаяд. 19/8, офис 101</p>
         </address>
         <div class="contacts__map">
-          <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+
         </div>
         <button class="contacts__button button" type="button">Напишите нам</button>
       </div>
       </article>
-      <footer class="main-footer">
-        <div class="main-footer__wrapper">
-          <a class="main-footer__logo" href="#">
-            <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
-          </a>
-          <div class="main-footer__social social">
-            <ul class="social__list">
-              <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">Мы в Вконтакте</a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">Мы в Ютубе</a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">Мы в Телеграме</a>
-              </li>
-            </ul>
-          </div>
-          <div class="main-footer__copyright copyright">
-            <b class="copyright__text">Разработано:</b>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <span class="visually-hidden">Логотип HTML Academy.</span>
-            </a>
-          </div>
+    </main>
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <a class="main-footer__logo" href="#">
+          <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
+        </a>
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+            </li>
+          </ul>
         </div>
-      </footer>
-      <div class="main-modal main-modal__close">
-        <div class="main-modal__wrapper">
-          <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
-            <h3 class="modal-form__title">Добавить в корзину</h3>
-            <p class="modal-form__label">Выберите размер:</p>
-            <div class="modal-form__buttons basket-button">
-              <button class="basket-button basket-button--size_s basket-button--current" type="button">S</button>
-              <button class="basket-button basket-button--size_m" type="button">M</button>
-              <button class="basket-button basket-button--size_l" type="button">L</button>
-            </div>
-            <button class="main-modal__button button-submit" type="submit">Добавить</button>
-          </form>
+        <div class="main-footer__copyright copyright">
+          <b class="copyright__text">Разработано:</b>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <span class="visually-hidden">Логотип HTML Academy</span>
+          </a>
         </div>
       </div>
-    </main>
+    </footer>
+    <div class="main-modal main-modal--close">
+      <div class="main-modal__wrapper">
+        <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
+          <h3 class="modal-form__title">Добавить в корзину</h3>
+          <div class="modal-form__buttons basket-button">
+            <fieldset class="basket-button__field">
+              <legend class="basket-button__title">Выберите размер:</legend>
+              <ul class="basket-button__list">
+                <li class="basket-button__item basket-button--size_s basket-button--current button-size">
+                  <label class="button-size__label" for="basket-button--size_s">s</label>
+                  <input class="button-size__control" type="radio" name="basket-size" value="size-s" id="basket-button--size_s">
+                </li>
+                <li class="basket-button__item basket-button--size_m button-size">
+                  <label class="button-size__label" for="basket-button--size_m">m</label>
+                  <input class="button-size__control" type="radio" name="basket-size" value="size-m" id="basket-button--size_m">
+                </li>
+                <li class="basket-button__item basket-button--size_l button-size">
+                  <label class="button-size__label" for="basket-button--size_l">l</label>
+                  <input class="button-size__control" type="radio" name="basket-size" value="size-l" id="basket-button--size_l">
+                </li>
+              </ul>
+            </fieldset>
+          </div>
+          <button class="main-modal__button button-submit" type="submit">Добавить</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
