--- a/source/index.html
+++ b/source/index.html
@@ -176,15 +176,15 @@
             <fieldset class="basket-button__field">
               <legend class="basket-button__title">Выберите размер:</legend>
               <ul class="basket-button__list">
-                <li class="basket-button__item basket-button--size_s basket-button--current button-size">
+                <li class="basket-button__item basket-button__item--size_s basket-button__item--current button-size">
                   <label class="button-size__label" for="basket-button--size_s">s</label>
                   <input class="button-size__control" type="radio" name="basket-size" value="size-s" id="basket-button--size_s">
                 </li>
-                <li class="basket-button__item basket-button--size_m button-size">
+                <li class="basket-button__item basket-button__item--size_m button-size">
                   <label class="button-size__label" for="basket-button--size_m">m</label>
                   <input class="button-size__control" type="radio" name="basket-size" value="size-m" id="basket-button--size_m">
                 </li>
-                <li class="basket-button__item basket-button--size_l button-size">
+                <li class="basket-button__item basket-button__item--size_l button-size">
                   <label class="button-size__label" for="basket-button--size_l">l</label>
                   <input class="button-size__control" type="radio" name="basket-size" value="size-l" id="basket-button--size_l">
                 </li>
