добавляет container\wrapper

--- a/source/index.html
+++ b/source/index.html
@@ -14,7 +14,7 @@
         <button class="main-nav__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class="main-nav__wrapper">
+        <div class="main-nav__container">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
               <a class="site-list__link" href="#">Каталог товаров</a>
@@ -46,7 +46,7 @@
     <main class="main-container">
       <h1 class="visually-hidden">Магазин милых штук ручной работы для дома "Mishka"</h1>
       <section class="products">
-        <div class="products__wrapper">
+        <div class="products__container">
           <h2 class="products__title">Милые штуки ручной работы для дома</h2>
           <ul class="products__list">
             <li class="products__item">
@@ -59,7 +59,7 @@
         </div>
       </section>
       <section class="featured">
-        <div class="featured__wrapper">
+        <div class="featured__container">
           <h2 class="visually-hidden">Описание</h2>
               <div class="featured__product product-card">
                   <h3 class="product-card__title">Вязаные корзинки</h3>
@@ -84,7 +84,7 @@
         </div>
       </section>
       <section class="about">
-        <div class="about__wrapper">
+        <div class="about__container">
           <h2 class="about__title">Коротко о нас:</h2>
           <ul class="about__list">
             <li class="about__item">
@@ -109,7 +109,7 @@
         </div>
       </section>
       <section class="reviews">
-        <div class="reviews__wrapper">
+        <div class="reviews__container">
           <h2 class="reviews__title">Отзывы</h2>
           <figure class="reviews__quote quote">
             <blockquote class="quote__text">Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как
@@ -127,7 +127,7 @@
         </div>
       </section>
       <article class="contacts">
-        <div class="contacts__wrapper">
+        <div class="contacts__container">
         <h2 class="contacts__title">Контакты</h2>
         <address class="contacts__address address">
           <p class="address__email">e-mail:</p>
@@ -143,7 +143,7 @@
       </article>
     </main>
     <footer class="main-footer">
-      <div class="main-footer__wrapper">
+      <div class="main-footer__container">
         <a class="main-footer__logo" href="#">
           <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
         </a>
@@ -169,7 +169,7 @@
       </div>
     </footer>
     <div class="main-modal main-modal--close">
-      <div class="main-modal__wrapper">
+      <div class="main-modal__container">
         <form class="main-modal__form modal-form" action="https://echo.htmlacademy.ru/" method="post">
           <h3 class="modal-form__title">Добавить в корзину</h3>
           <div class="modal-form__buttons basket-button">
