добавляет button reviews class

--- a/source/index.html
+++ b/source/index.html
@@ -120,9 +120,9 @@
             <figcaption class="quote__author author">Анастасия Красильникова <cite class="author__cite">@misssssiskras</cite></figcaption>
           </figure>
           <p class="reviews__buttons button-reviews">
-            <button class="button-reviews button-reviews--previous" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
-            <button class="button-reviews button-reviews--next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
-            <button class="button-reviews button-reviwe" type="button">Написать</button>
+            <button class=" button-reviews__previous" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+            <button class=" button-reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
+            <button class=" button-reviwe__write" type="button">Написать</button>
           </p>
         </div>
       </section>
