добавляет button reviews class

--- a/source/index.html
+++ b/source/index.html
@@ -122,7 +122,7 @@
           <p class="reviews__buttons button-reviews">
             <button class=" button-reviews__previous" type="button"><span class="visually-hidden">Предыдущий отзыв</span></button>
             <button class=" button-reviews__next" type="button"><span class="visually-hidden">Следующий отзыв</span></button>
-            <button class=" button-reviwe__write" type="button">Написать</button>
+            <button class=" button-reviews__write" type="button">Написать</button>
           </p>
         </div>
       </section>
