--- a/source/index.html
+++ b/source/index.html
@@ -28,7 +28,7 @@
               </ul>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="#">Вязание на заказ</a>
+              <a class="site-list__link" href="form.html">Вязание на заказ</a>
             </li>
           </ul>
           <ul class="main-nav__list user-list">
