--- a/source/form.html
+++ b/source/form.html
@@ -27,7 +27,7 @@
             </ul>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link site-list__link--current" href="#">Вязание на заказ</a>
+            <a class="site-list__link" href="#">Вязание на заказ</a>
           </li>
         </ul>
         <ul class="main-nav__list user-list">
@@ -42,5 +42,32 @@
       </div>
     </nav>
   </header>
+  <section class="order">
+    <div class="order__container">
+      <h1 class="order__title">Вязание на заказ</h2>
+      <form class="order__form form" action="https://echo.htmlacademy.ru" method="post">
+        <p class="form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+        <fieldset class="form__field-type type-form">
+          <legend>Тип</legend>
+          <ul class="type-form__list">
+            <li class="type-form__item">
+              <label class="type-form__control">
+                <input class="visually-hidden" type="radio" name="type-product" value="interior" checked>
+                <span class="type-form__control-mark type-form__control-mark--radio type-form__control-mark--checked"></span>
+                <span class="type-form__control-label type-form__control-label--radio">Аксессуар для интерьера</span>
+              </label>
+            </li>
+            <li class="type-form__item">
+              <label class="type-form__control">
+                <input class="visually-hidden" type="radio" name="type-product" value="toy">
+                <span class="type-form__control-mark type-form__control-mark--radio"></span>
+                <span class="type-form__control-label type-form__control-label--radio">Детская игрушка</span>
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+      </form>
+    </div>
+  </section>
 </body>
 </html>
