--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html class="page-form" lang="ru">
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -67,7 +67,7 @@
           </ul>
         </fieldset>
         <fieldset class="form__field-color color-form">
-          <legend class="color-form__title">
+          <legend class="color-form__title">Цвет</legend>
             <ul class="color-form__list">
               <li class="color-form__item">
                 <label class="color-form__control">
@@ -112,7 +112,15 @@
                 </label>
               </li>
             </ul>
-          </legend>
+        </fieldset>
+        <fieldset class="form__field-user user-form">
+          <legend class="user-form__title">фио</legend>
+          <ul class="user-form__list">
+            <li class="user-form__item">
+              <label class="user-form__name" for="name">Имя:</label>
+              <input type="text">
+            </li>
+          </ul>
         </fieldset>
       </form>
     </div>
