добавляет form.html

--- a/source/index.html
+++ b/source/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Mishka</title>
-    <script type="text/javascript" charset="utf-8" defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
+    <script defer src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abe737fd5407db2382ec0460244a83536a12494a83442059e3a15feddfcf4c2e5&amp;width=100%25&amp;height=454&amp;lang=ru_RU&amp;scroll=true"></script>
   </head>
   <body class="page__body">
     <header class="main-header">
@@ -88,22 +88,22 @@
           <h2 class="about__title">Коротко о нас:</h2>
           <ul class="about__list">
             <li class="about__item">
-              <span class="about__text about__text--icon_flower" href="#">Экологически чистые материалы</span>
+              <span class="about__text about__text--icon_flower">Экологически чистые материалы</span>
             </li>
             <li class="about__item">
-              <span class="about__text about__text--icon_banknote" href="#">Скандинавский стиль по российской цене</span>
+              <span class="about__text about__text--icon_banknote">Скандинавский стиль по российской цене</span>
             </li>
             <li class="about__item">
-              <span class="about__text about__text--icon_heart" href="#">Увеличивает лайки на фотографиях</span>
+              <span class="about__text about__text--icon_heart">Увеличивает лайки на фотографиях</span>
             </li>
             <li class="about__item">
-              <span class="about__text about__text--icon_clew" href="#">Связано вручную с любовью и умилением</span>
+              <span class="about__text about__text--icon_clew">Связано вручную с любовью и умилением</span>
             </li>
             <li class="about__item">
-              <span class="about__text about__text--icon_rocket" href="#">Поддержка отечественного производителя</span>
+              <span class="about__text about__text--icon_rocket">Поддержка отечественного производителя</span>
             </li>
             <li class="about__item">
-              <span class="about__text about__text--icon_gift-wrap" href="#">Поставляется в подарочной упаковке</span>
+              <span class="about__text about__text--icon_gift-wrap">Поставляется в подарочной упаковке</span>
             </li>
           </ul>
         </div>
