--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
   </header>
   <section class="order">
     <div class="order__container">
-      <h1 class="order__title">Вязание на заказ</h2>
+      <h2 class="order__title">Вязание на заказ</h2>
       <form class="order__form form" action="https://echo.htmlacademy.ru" method="post">
         <p class="form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         <fieldset class="form__field-type type-form">
@@ -118,12 +118,66 @@
           <ul class="user-form__list">
             <li class="user-form__item">
               <label class="user-form__name" for="name">Имя:</label>
-              <input type="text">
+              <input class="user-form__value" type="text" id="name">
+            </li>
+            <li class="user-form__item">
+              <label class="user-form__name" for="surname">Фамилия:</label>
+              <input class="user-form__value" type="text" id="name">
+            </li>
+            <li class="user-form__item">
+              <label class="user-form__name" for="middle-name">Отчество:</label>
+              <input class="user-form__value" type="text" id="name">
             </li>
           </ul>
         </fieldset>
+        <fieldset class="form__field-tel tel-form">
+          <legend class="tel-form__title">Тел</legend>
+            <ul class="tel-form__list">
+              <li class="tel-form__item">
+                <input class="tel-form__value" type="tel" name="tel-number">
+              </li>
+            </ul>
+        </fieldset>
+        <fieldset class="form__field-email email-form">
+          <legend class="email-form__title">e-mail</legend>
+          <input class="email-form__value" type="email">
+        </fieldset>
+        <fieldset class="form__field-info info-form">
+          <legend class="info-form__title">Доп</legend>
+          <textarea class="info-form__text" name="additional-info" cols="30" rows="8"></textarea>
+        </fieldset>
+        <span class="info-form__required-note"><sup>*</sup>Поля обязательны для заполнения</span>
+        <div class="form__button">
+          <button type="submit">Отправить заказ</button>
+        </div>
       </form>
     </div>
   </section>
+  <footer class="main-footer">
+    <div class="main-footer__container">
+      <a class="main-footer__logo" href="#">
+        <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
+      </a>
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <b class="copyright__text">Разработано:</b>
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+          <span class="visually-hidden">Логотип HTML Academy</span>
+        </a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
