добавляет form.html-fix

--- a/source/form.html
+++ b/source/form.html
@@ -44,7 +44,7 @@
   </header>
   <section class="order">
     <div class="order__container">
-      <h2 class="order__title">Вязание на заказ</h2>
+      <h1 class="order__title">Вязание на заказ</h1>
       <form class="order__form form" action="https://echo.htmlacademy.ru" method="post">
         <p class="form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
         <fieldset class="form__field-type type-form">
@@ -146,7 +146,7 @@
           <legend class="info-form__title">Доп</legend>
           <textarea class="info-form__text" name="additional-info" cols="30" rows="8"></textarea>
         </fieldset>
-        <span class="info-form__required-note"><sup>*</sup>Поля обязательны для заполнения</span>
+        <span class="form__required-note"><sup>*</sup>Поля обязательны для заполнения</span>
         <div class="form__button">
           <button type="submit">Отправить заказ</button>
         </div>
