--- a/source/form.html
+++ b/source/form.html
@@ -2,7 +2,7 @@
 <html class="page-form" lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Mishka Вязание на заказ</title>
 </head>
 <body class="page-form__centerer">
   <header class="main-header">
@@ -16,7 +16,7 @@
       <div class="main-nav__container">
         <ul class="main-nav__list site-list">
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Каталог товаров</a>
+            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
             <ul class="main-nav__list site-sublist">
               <li class="site-sublist__item">
                 <a class="site-sublist__link" href="#">Новые поступления</a>
@@ -42,6 +42,7 @@
       </div>
     </nav>
   </header>
+  <main class="main-container">
   <section class="order">
     <div class="order__container">
       <h1 class="order__title">Вязание на заказ</h1>
@@ -153,6 +154,7 @@
       </form>
     </div>
   </section>
+  </main>
   <footer class="main-footer">
     <div class="main-footer__container">
       <a class="main-footer__logo" href="#">
