--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
         <div class="main-nav__container">
           <ul class="main-nav__list site-list">
             <li class="site-list__item">
-              <a class="site-list__link" href="#">Каталог товаров</a>
+              <a class="site-list__link" href="catalog.html">Каталог товаров</a>
               <ul class="main-nav__list site-sublist">
                 <li class="site-sublist__item">
                   <a class="site-sublist__link" href="#">Новые поступления</a>
