--- a/source/catalog.html
+++ b/source/catalog.html
@@ -94,7 +94,10 @@
     <article class="production">
       <div class="production__container">
         <h2 class="production__title">Процесс производства</h2>
-        <img class="production__video" src="images/catalog/video-mobile.jpg"  width="260" height="195" alt="Тут должно быть интересное видео.">
+        <div class="production__video preview">
+          <img class="preview__image" src="images/catalog/video-mobile.jpg"  width="260" height="195" alt="Тут должно быть интересное видео.">
+          <button class="preview__button" type="button"></button>
+        </div>
         <p class="production__content video-description">
           <span class="video-description__text">По просьбам наших любимых фолловеров мы сняли для вас подробное видео о том, как появляются наши товары.</span>
           <a class="video-description__button" href="#">Сделать заказ</a>
