добавляет fix hw

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -27,7 +27,7 @@
             </ul>
           </li>
           <li class="site-list__item">
-            <a class="site-list__link" href="#">Вязание на заказ</a>
+            <a class="site-list__link" href="form.html">Вязание на заказ</a>
           </li>
         </ul>
         <ul class="main-nav__list user-list">
@@ -48,8 +48,8 @@
       <h2 class="visually-hidden">Карточки товаров</h2>
       <ul class="products__list">
         <li class="products__item card-product">
-          <h2 class="card-product__title">Зайчик-попрыгайчик</h2>
-          <img class="card-product__image" src="images/catalog/bunny-mobile.jpg" width="260" height="195" alt="Вязанный зайчик-попрыгайчик голубого цвета.">
+          <a href="#"><h2 class="card-product__title">Зайчик-попрыгайчик</h2></a>
+          <a href="#"><img class="card-product__image" src="images/catalog/bunny-mobile.jpg" width="260" height="195" alt="Вязанный зайчик-попрыгайчик голубого цвета."></a>
           <dl class="card-product__list description-list">
             <dt class="description-list__name">Рост</dt>
             <dd class="description-list__value">30 см,</dd>
@@ -62,8 +62,8 @@
           </p>
         </li>
         <li class="products__item card-product">
-          <h2 class="card-product__title">Корзинка для белья</h2>
-          <img class="card-product__image" src="images/catalog/laundry-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная полотенцами.">
+          <a href="#"><h2 class="card-product__title">Корзинка для белья</h2></a>
+          <a href="#"><img class="card-product__image" src="images/catalog/laundry-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная полотенцами."></a>
           <dl class="card-product__list description-list">
             <dt class="description-list__name">Диаметр</dt>
             <dd class="description-list__value">15 см,</dd>
@@ -76,8 +76,8 @@
           </p>
         </li>
         <li class="products__item card-product">
-          <h2 class="card-product__title">Зайчик-попрыгайчик</h2>
-          <img class="card-product__image" src="images/catalog/toy-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная мягкими игрушками.">
+          <a href="#"><h2 class="card-product__title">Зайчик-попрыгайчик</h2></a>
+          <a href="#"><img class="card-product__image" src="images/catalog/toy-basket-mobile.jpg" width="260" height="195" alt="Вязанная корзина наполненная мягкими игрушками."></a>
           <dl class="card-product__list description-list">
             <dt class="description-list__name">Диаметр</dt>
             <dd class="description-list__value">30 см,</dd>
