--- a/source/form.html
+++ b/source/form.html
@@ -124,10 +124,11 @@
           </ul>
         </fieldset>
         <fieldset class="form__field-tel tel-form">
-          <legend class="tel-form__title">Тел</legend>
+          <legend class="tel-form__title"><span class="visually-hidden">Номер телефона</span></legend>
             <ul class="tel-form__list">
               <li class="tel-form__item">
-                <input class="tel-form__value" type="tel" name="tel-number">
+                <label for="tel-number">Тел</label>
+                <input class="tel-form__value" type="tel" name="tel-number" id="tel-number">
               </li>
             </ul>
         </fieldset>
