--- a/source/form.html
+++ b/source/form.html
@@ -1,48 +1,10 @@
-<!DOCTYPE html>
-<html class="page-form" lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <title>Mishka Вязание на заказ</title>
-</head>
-<body class="page-form__centerer">
-  <header class="main-header">
-    <a class="main-header__logo" href="index.html">
-      <img src="icons/mishka-logo-mobile.svg.svg" width="86" height="35" alt="Логотип Мишки.">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button">
-        <span class="visually-hidden">Открыть меню</span>
-      </button>
-      <div class="main-nav__container">
-        <ul class="main-nav__list site-list">
-          <li class="site-list__item">
-            <a class="site-list__link" href="catalog.html">Каталог товаров</a>
-            <ul class="main-nav__list site-sublist">
-              <li class="site-sublist__item">
-                <a class="site-sublist__link" href="#">Новые поступления</a>
-              </li>
-              <li class="site-sublist__item">
-                <a class="site-sublist__link" href="#">Распродажа</a>
-              </li>
-            </ul>
-          </li>
-          <li class="site-list__item">
-            <a class="site-list__link" href="#">Вязание на заказ</a>
-          </li>
-        </ul>
-        <ul class="main-nav__list user-list">
-          <li class="user-list__item">
-            <a class="user-list__link" href="#">Поиск по сайту</a>
-          </li>
-          <li class="user-list__item">
-            <a class="user-list__link" href="#">Корзина: пока пуста</a>
-            <p class="user-list__description">Бесплатная доставка по России</p>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="main-container">
+{% set pageId = 2 %}
+{% set permalink = pages[pageId].path %}
+{% extends "./templates/_layout.twig" %}
+
+{% block main %}
+
+<main class="main-container">
   <section class="order">
     <div class="order__container">
       <h1 class="order__title">Вязание на заказ</h1>
@@ -67,44 +29,44 @@
         </fieldset>
         <fieldset class="form__field-color color-form">
           <legend class="color-form__title">Цвет</legend>
-            <ul class="color-form__list">
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="white" checked>
-                  <span class="color-form__control-label color-form__control-label--checkbox">Белый</span>
-                </label>
-              </li>
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="tiffany">
-                  <span class="color-form__control-label color-form__control-label--checkbox">Тиффани</span>
-                </label>
-              </li>
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="pink">
-                  <span class="color-form__control-label color-form__control-label--checkbox">Розовый</span>
-                </label>
-              </li>
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="gray" checked>
-                  <span class="color-form__control-label color-form__control-label--checkbox">Серый</span>
-                </label>
-              </li>
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="black">
-                  <span class="color-form__control-label color-form__control-label--checkbox">Чёрный</span>
-                </label>
-              </li>
-              <li class="color-form__item">
-                <label class="color-form__control">
-                  <input class="visually-hidden" type="checkbox" name="color-product" value="orange">
-                  <span class="color-form__control-label color-form__control-label--checkbox">Оранжевый</span>
-                </label>
-              </li>
-            </ul>
+          <ul class="color-form__list">
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="white" checked>
+                <span class="color-form__control-label color-form__control-label--checkbox">Белый</span>
+              </label>
+            </li>
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="tiffany">
+                <span class="color-form__control-label color-form__control-label--checkbox">Тиффани</span>
+              </label>
+            </li>
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="pink">
+                <span class="color-form__control-label color-form__control-label--checkbox">Розовый</span>
+              </label>
+            </li>
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="gray" checked>
+                <span class="color-form__control-label color-form__control-label--checkbox">Серый</span>
+              </label>
+            </li>
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="black">
+                <span class="color-form__control-label color-form__control-label--checkbox">Чёрный</span>
+              </label>
+            </li>
+            <li class="color-form__item">
+              <label class="color-form__control">
+                <input class="visually-hidden" type="checkbox" name="color-product" value="orange">
+                <span class="color-form__control-label color-form__control-label--checkbox">Оранжевый</span>
+              </label>
+            </li>
+          </ul>
         </fieldset>
         <fieldset class="form__field-user user-form">
           <legend class="user-form__title">фио</legend>
@@ -147,32 +109,6 @@
       </form>
     </div>
   </section>
-  </main>
-  <footer class="main-footer">
-    <div class="main-footer__container">
-      <a class="main-footer__logo" href="#">
-        <img src="icons/logo-footer.svg" width="102" height="34" alt="Логотип Мишки.">
-      </a>
-      <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy"><span class="visually-hidden">Мы в Вконтакте</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru"><span class="visually-hidden">Мы в Ютубе</span></a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy"><span class="visually-hidden">Мы в Телеграме</span></a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <b class="copyright__text">Разработано:</b>
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-          <span class="visually-hidden">Логотип HTML Academy</span>
-        </a>
-      </div>
-    </div>
-  </footer>
-</body>
-</html>
+</main>
+
+{% endblock %}
