добавляет настройку npm

--- a/source/index.html
+++ b/source/index.html
@@ -36,7 +36,7 @@
           <dt class="product-card__item">Высота:</dt>
           <dd class="product-card__specification">15 см</dd>
         </dl>
-        <img class="product-card__image" src="images/basket-mobile.jpg" width="260" height="315" alt="Набор из трёх вязанных корзинок.">
+        <img class="product-card__image" src="img/basket-mobile.jpg" width="260" height="315" alt="Набор из трёх вязанных корзинок.">
         <dl class="product-card__price product-price">
           <dt class="product-price__description">Цена:</dt>
           <dd class="product-price__number">990 руб.</dd>
