--- a/source/index.html
+++ b/source/index.html
@@ -19,60 +19,60 @@
       </ul>
     </div>
   </section>
-  <section class="featured">
+  <section class="featured line-decor__bottom">
     <div class="featured__container">
       <h2 class="visually-hidden">Описание</h2>
-      <div class="featured__product product-card">
-        <h3 class="product-card__title heading--level_2">Вязаные корзинки</h3>
-        <span class="product-card__label card-label">Товар недели</span>
-        <p class="product-card__description">
+      <div class="featured__product product">
+        <h3 class="product__title heading--level_2">Вязаные корзинки</h3>
+        <span class="product__label card-label">Товар недели</span>
+        <p class="product__description">
           Экологически чистая пряжа, ручная работа. Доступны в шести расцветках и трёх размерах.
         </p>
-        <dl class="product-card__list">
-          <dt class="product-card__item">Цвет:</dt>
-          <dd class="product-card__specification">иффани/серый</dd>
-          <dt class="product-card__item">Диаметр:</dt>
-          <dd class="product-card__specification">25 см</dd>
-          <dt class="product-card__item">Высота:</dt>
-          <dd class="product-card__specification">15 см</dd>
+        <dl class="product__list product-specification">
+          <dt class="product__item">Цвет:</dt>
+          <dd class="product__specification">иффани/серый</dd>
+          <dt class="product__item">Диаметр:</dt>
+          <dd class="product__specification">25 см</dd>
+          <dt class="product__item">Высота:</dt>
+          <dd class="product__specification">15 см</dd>
         </dl>
-        <img class="product-card__image" src="img/basket-mobile.jpg" width="260" height="315" alt="Набор из трёх вязанных корзинок.">
-        <dl class="product-card__price product-price">
+        <img class="product__image" src="img/basket-mobile.jpg" width="260" height="315" alt="Набор из трёх вязанных корзинок.">
+        <dl class="product__price product-price">
           <dt class="product-price__description">Цена:</dt>
           <dd class="product-price__number">990 руб.</dd>
         </dl>
-        <a class="product-card__button" href="form.html">Заказать</a>
+        <a class="product__button button" href="form.html">Заказать</a>
       </div>
     </div>
   </section>
   <section class="about">
-    <div class="about__container">
-      <h2 class="about__title">Коротко о нас:</h2>
-      <ul class="about__list">
-        <li class="about__item">
-          <span class="about__text about__text--icon_flower">Экологически чистые материалы</span>
+    <div class="page__centerer">
+      <h2 class="about__title heading--level_2">Коротко о нас:</h2>
+      <ul class="about__list advantage">
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_flower">Экологически чистые материалы</span>
         </li>
-        <li class="about__item">
-          <span class="about__text about__text--icon_banknote">Скандинавский стиль по российской цене</span>
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_banknote">Скандинавский стиль по российской цене</span>
         </li>
-        <li class="about__item">
-          <span class="about__text about__text--icon_heart">Увеличивает лайки на фотографиях</span>
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_heart">Увеличивает лайки на фотографиях</span>
         </li>
-        <li class="about__item">
-          <span class="about__text about__text--icon_clew">Связано вручную с любовью и умилением</span>
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_clew">Связано вручную с любовью и умилением</span>
         </li>
-        <li class="about__item">
-          <span class="about__text about__text--icon_rocket">Поддержка отечественного производителя</span>
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_rocket">Поддержка отечественного производителя</span>
         </li>
-        <li class="about__item">
-          <span class="about__text about__text--icon_gift-wrap">Поставляется в подарочной упаковке</span>
+        <li class="advantage__item">
+          <span class="advantage__text advantage__text--icon_gift-wrap">Поставляется в подарочной упаковке</span>
         </li>
       </ul>
     </div>
   </section>
-  <section class="reviews">
-    <div class="reviews__container">
-      <h2 class="reviews__title">Отзывы</h2>
+  <section class="reviews line-decor__bottom">
+    <div class="page__centerer">
+      <h2 class="reviews__title heading--level_2">Отзывы</h2>
       <figure class="reviews__quote quote">
         <blockquote class="quote__text">
           Я молодая мама, но всё равно фотографии не набирали и близко такого количества лайков, как у популярных инстамамочек. В отчаянии, я накупила аксессуаров и игрушек в Мишке, и мои фотографии сразу стали более стильными, а также набирают больше лайков!
@@ -80,13 +80,15 @@
         <figcaption class="quote__author author">Анастасия Красильникова <cite class="author__cite">@misssssiskras</cite></figcaption>
       </figure>
       <p class="reviews__buttons button-reviews">
-        <button class=" button-reviews__previous" type="button">
-          <span class="visually-hidden">Предыдущий отзыв</span>
-        </button>
-        <button class=" button-reviews__next" type="button">
-          <span class="visually-hidden">Следующий отзыв</span>
-        </button>
-        <a class=" button-reviews__write" href="#">Написать</a>
+        <div class="button-reviews__slider slider-reviews">
+          <button class=" slider-reviews__previous button" type="button">
+            <span class="visually-hidden">Предыдущий отзыв</span>
+          </button>
+          <button class=" slider-reviews__next button" type="button">
+            <span class="visually-hidden">Следующий отзыв</span>
+          </button>
+        </div>
+        <a class=" button-reviews__write button" href="#">Написать</a>
       </p>
     </div>
   </section>
