--- a/source/form.html
+++ b/source/form.html
@@ -4,14 +4,14 @@
 
 {% block main %}
 
-<main class="main-container">
+<main class="page__centerer">
   <section class="order">
     <div class="order__container">
-      <h1 class="order__title">Вязание на заказ</h1>
-      <form class="order__form form" action="https://echo.htmlacademy.ru" method="post">
-        <p class="form__text">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
-        <fieldset class="form__field-type type-form">
-          <legend class="type-form__title">Тип</legend>
+      <h1 class="order__title heading header-form">Вязание на заказ</h1>
+      <form class="order__form form-order" action="https://echo.htmlacademy.ru" method="post">
+        <p class="form-order__text text-form">Мы будем рады воплотить в жизнь ваши пожелания! Заполните простую форму заказа и мы свяжемся с вами, чтобы уточнить детали.</p>
+        <fieldset class="form-order__field-type type-form fieldset-border">
+          <legend class="type-form__title label-form">Тип</legend>
           <ul class="type-form__list">
             <li class="type-form__item">
               <label class="type-form__control">
@@ -27,8 +27,8 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__field-color color-form">
-          <legend class="color-form__title">Цвет</legend>
+        <fieldset class="form-order__field-color color-form fieldset-border">
+          <legend class="color-form__title label-form label-form">Цвет</legend>
           <ul class="color-form__list">
             <li class="color-form__item">
               <label class="color-form__control">
@@ -68,43 +68,43 @@
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__field-user user-form">
-          <legend class="user-form__title">фио</legend>
+        <fieldset class="form-order__field-user user-form fieldset-border">
+          <legend class="user-form__title label-form">фио</legend>
           <ul class="user-form__list">
             <li class="user-form__item">
               <label class="user-form__name" for="name">Имя:</label>
-              <input class="user-form__value" type="text" id="name">
+              <input class="user-form__value" type="text" id="name" placeholder="Введите ваше имя">
             </li>
             <li class="user-form__item">
               <label class="user-form__name" for="surname">Фамилия:</label>
-              <input class="user-form__value" type="text" id="surname">
+              <input class="user-form__value"  type="text" id="surname" placeholder="Укажите фамилию">
             </li>
             <li class="user-form__item">
               <label class="user-form__name" for="middle-name">Отчество:</label>
-              <input class="user-form__value" type="text" id="middle-name">
+              <input class="user-form__value" type="text" id="middle-name" placeholder="Отчество, если желаете">
             </li>
           </ul>
         </fieldset>
-        <fieldset class="form__field-tel сontact-details">
+        <fieldset class="form-order__field-contacts сontact-details fieldset-border">
           <legend class="сontact-details__title"><span class="visually-hidden">Contact details</span></legend>
             <ul class="сontact-details__list">
               <li class="сontact-details__item tel-number">
-                <label class="tel-number__title" for="tel-number">Тел</label>
-                <input class="сontact-details__value" type="tel" name="tel-number" id="tel-number">
+                <label class="tel-number__title label-form" for="tel-number">Тел</label>
+                <input class="сontact-details__value" type="tel" name="tel-number" id="tel-number" placeholder="+7 ХХХ ХХХ ХХ ХХ">
               </li>
               <li class="сontact-details__item email-form">
-                <label class="email-form__title" for="email">e-mail</label>
-                <input class="email-form__value" type="email" id="email">
+                <label class="email-form__title label-form" for="email">e-mail</label>
+                <input class="email-form__value" type="email" id="email" placeholder="Ваш Emai">
               </li>
             </ul>
         </fieldset>
-        <div class="form__field-info info-form">
-          <label class="info-form__title" for="additional-info">Доп</label>
-          <textarea class="info-form__text" name="additional-info" id="additional-info" cols="30" rows="8"></textarea>
+        <div class="form-order__field-info info-form">
+          <label class="info-form__title label-form" for="additional-info">Доп</label>
+          <textarea class="info-form__text" name="additional-info" id="additional-info" cols="30" rows="8" placeholder="Опишите все ваши пожелания к заказу"></textarea>
         </div>
-        <span class="form__required-note"><sup>*</sup>Поля обязательны для заполнения</span>
-        <div class="form__button">
-          <button type="submit">Отправить заказ</button>
+        <span class="form-order__required-note required-note"><sup>*</sup>Поля обязательны для заполнения</span>
+        <div class="form-order__button ">
+          <button class="button" type="submit">Отправить заказ</button>
         </div>
       </form>
     </div>
